--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -423,18 +423,6 @@ textarea {
 /* =============
     Footer
 ============= */
-#container-grid {
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  z-index: 500;
-}
-#container-grid > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-.gs-dev-tools {
-  z-index: 550;
+#s, #b_2 {
+  alpha: 0;
 }
