--- a/dev/scss/sections/_svg-content.scss
+++ b/dev/scss/sections/_svg-content.scss
@@ -1,24 +1,4 @@
-#container-grid{
-    position: absolute;
-    height: 100vh;
-     width: 100%;
-    z-index: 500;
-    
- 
- 
-  >div{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-      height: 100%;
- 
- 
-     svg{
-             
-     }
-   }
- }
- 
- .gs-dev-tools{
-    z-index: 550;
- }
+#s,#b_2{
+  alpha: 0;
+
+}
